Rename api URL
